--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -30,7 +30,7 @@ jobs:
     - name: set environment variables
       run: |
         echo "::set-env name=NUGET_HTTP_CACHE::${env:LOCALAPPDATA}/Nuget/v3-cache"
-        echo "::set-env name=NUGET_GLOBAL_CACHE::${env:USERPROFILE}/Nuget/v3-cache"
+        echo "::set-env name=NUGET_GLOBAL_CACHE::${env:USERPROFILE}/.nuget/packages"
 
     - name: cache nuget packages
       uses: actions/cache@v2
