--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -29,8 +29,8 @@ jobs:
     # ${{ env.<name> }} では、ワークフロー外で定義されたグローバル環境変数は参照できない
     - name: set environment variables
       run: |
-        echo "::set-env name=NUGET_HTTP_CACHE::${env:LOCALAPPDATA}/Nuget/v3-cache"
-        echo "::set-env name=NUGET_GLOBAL_CACHE::${env:USERPROFILE}/.nuget/packages"
+        echo "::set-env name=NUGET_HTTP_CACHE::${env:LOCALAPPDATA}\Nuget\v3-cache"
+        echo "::set-env name=NUGET_GLOBAL_CACHE::${env:USERPROFILE}\.nuget\packages"
 
     - name: cache nuget packages
       uses: actions/cache@v2
@@ -38,7 +38,7 @@ jobs:
         cache-prefix: nuget-http-caches-
       with:
         path: ${{ env.NUGET_HTTP_CACHE }}
-        key: ${{ env.cache-prefix }}${{ hashFiles('**/packages.lock.json') }}
+        key: ${{ env.cache-prefix }}${{ hashFiles('**\packages.lock.json') }}
         restore-keys: ${{ env.cache-prefix }}
 
     - name: cache nuget packages
@@ -47,7 +47,7 @@ jobs:
         cache-prefix: nuget-global-caches-
       with:
         path: ${{ env.NUGET_GLOBAL_CACHE }}
-        key: ${{ env.cache-prefix }}${{ hashFiles('**/packages.lock.json') }}
+        key: ${{ env.cache-prefix }}${{ hashFiles('**\packages.lock.json') }}
         restore-keys: ${{ env.cache-prefix }}
 
     - name: Setup .NET Core
