--- a/src/nuget.config
+++ b/src/nuget.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <config>
+    <add key="defaultPushSource" value="https://www.myget.org/F/aetos/api/v2/package" />
+  </config>
   <packageSources>
     <clear/>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
